k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: goofy-cdn
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer  # Pour obtenir une IP externe
